@@ -1,2 +1,2 @@
-DOS2UNIX_VERSION = 5.0.1-beta2
-DOS2UNIX_DATE = 2010-03-03
+DOS2UNIX_VERSION = 5.0.1-beta3
+DOS2UNIX_DATE = 2010-03-04
